--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -7,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: "Lato", sans-serif;
 }
 
 .btn-get-started {
