--- a/docs/docs.css
+++ b/docs/docs.css
@@ -10,7 +10,6 @@
   display: flex;
   flex-direction: column;
   margin: 2rem;
-  /* background-color: blue; */
   height: 100vh;
   font-family: "Lato", sans-serif;
 }
@@ -30,7 +29,6 @@
 /* ||navigation|| */
 .nav {
   display: flex;
-  /* background-color: red; */
   justify-content: space-between;
   padding: 2rem;
   border-bottom: 0.01rem solid gray;
@@ -55,7 +53,6 @@
 .aside {
   flex: 1;
   padding: 1rem;
-  /* background-color: yellow; */
   border-right: 00.01rem solid gray;
 }
 .aside-heading {
@@ -68,6 +65,24 @@
 /* || article || */
 .article {
   flex: 4;
-  padding: 1rem;
-  /* background-color: orange; */
+  display: flex;
+  flex-direction: column;
+  padding: 1.5rem;
+  gap: 3rem;
+}
+.article > h1 {
+  font-size: 2rem;
+}
+.inner-container {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  gap: 1rem;
+}
+.showcase {
+  display: flex;
+  justify-content: space-around;
+  background-color: #f5f5f5;
+  padding: 3rem;
+  border-radius: 0.3rem;
 }
