--- a/docs/docs.css
+++ b/docs/docs.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
-
 * {
   margin: 0;
   padding: 0;
@@ -85,4 +83,13 @@
   background-color: #f5f5f5;
   padding: 3rem;
   border-radius: 0.3rem;
+}
+.showcase-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: #f5f5f5;
+  padding: 3rem;
+  border-radius: 0.3rem;
+  gap: 2rem;
 }
