Changes mentioned in PR review: added variable to some colors that I forgot to add

--- a/components/alert.css
+++ b/components/alert.css
@@ -75,7 +75,7 @@
 .info-outline {
   color: var(--alert-info);
   border: 0.01rem solid var(--alert-info);
-  background-color: #fff;
+  background-color: var(--white);
 }
 
 /* || Alert with text link || */
