--- a/docs/docs.css
+++ b/docs/docs.css
@@ -17,7 +17,7 @@
 }
 .link {
   text-decoration: none;
-  color: black;
+  color: var(--black);
 }
 .link:hover {
   font-weight: bold;
@@ -29,7 +29,7 @@
   display: flex;
   justify-content: space-between;
   padding: 2rem;
-  border-bottom: 0.01rem solid gray;
+  border-bottom: 0.01rem solid var(--doc-border);
 }
 .nav-brand-name {
   font-weight: bold;
@@ -51,7 +51,7 @@
 .aside {
   flex: 1;
   padding: 1rem;
-  border-right: 00.01rem solid gray;
+  border-right: 00.01rem solid var(--doc-border);
 }
 .aside-heading {
   font-size: 1.4rem;
@@ -80,7 +80,7 @@
 .showcase {
   display: flex;
   justify-content: space-around;
-  background-color: #f5f5f5;
+  background-color: var(--showcase-bg);
   padding: 3rem;
   border-radius: 0.3rem;
 }
@@ -88,7 +88,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  background-color: #f5f5f5;
+  background-color: var(--showcase-bg);
   padding: 3rem;
   border-radius: 0.3rem;
   gap: 2rem;
