--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,23 @@
 
 @import url("/components/avatar.css");
 @import url("/components/alert.css");
+@import url("/components/badge.css");
 
 :root {
   --white: #fff;
   --black: #000;
   --doc-border: #808080;
   --showcase-bg: #f5f5f5;
+  --primary: #0ea5e9;
+  --primary-hover: #0284c7;
+  --secondary: #71717a;
+  --secondary-hover: #52525b;
+  --success: #34d399;
+  --success-hover: #10b981;
+  --warning: #ffa500;
+  --warning-hover: #ff8c00;
+  --danger: #dc2626;
+  --danger-hover: #b91c1c;
   --alert-primary: #1da1f2;
   --alert-primary-bg: #ceeafc;
   --alert-secondary: #fff;
@@ -26,4 +37,7 @@
   --offline: #808080;
   --idle: #e69409;
   --dnd: #ff0000;
+  --btn-link-bg: #0ea5e9;
+  --btn-link-hover: #053f59;
+  --btn-link-bg-hover: #47bef4;
 }
