--- a/components/button.html
+++ b/components/button.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link href="/styles.css" rel="stylesheet" type="text/css" />
     <link href="/docs/docs.css" rel="stylesheet" type="text/css" />
@@ -146,15 +149,15 @@
           <div class="inner-container">
             <h2>Icon Button</h2>
             <div class="showcase">
-              <buttton class="btn-icon">
+              <button class="btn-icon">
                 <i class="fa-solid fa-cart-shopping"></i>
-              </buttton>
-              <buttton class="btn-icon">
+              </button>
+              <button class="btn-icon">
                 <i class="fa-solid fa-floppy-disk"></i>
-              </buttton>
-              <buttton class="btn-icon">
+              </button>
+              <button class="btn-icon">
                 <i class="fa-solid fa-download"></i>
-              </buttton>
+              </button>
             </div>
             <iframe
               src="https://carbon.now.sh/embed/Ph2rdJ8DWQr1ivoyEqxX"
