--- a/components/image.html
+++ b/components/image.html
@@ -84,7 +84,35 @@
           <h1>Image</h1>
           <div class="inner-container">
             <h2>Responsive Image</h2>
-            <div class="showcase"></div>
+            <div class="showcase">
+              <img
+                src="/varkala-beach.jpg"
+                alt="responsive"
+                class="img-responsive"
+              />
+            </div>
+            <iframe
+              src="https://carbon.now.sh/embed/67h4GUudqrWvRQgNbtXi"
+              style="
+                width: 100%;
+                height: 100%;
+                border: 0;
+                transform: scale(1);
+                overflow: hidden;
+              "
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
+          <div class="inner-container">
+            <h2>Circular Image</h2>
+            <div class="showcase">
+              <img
+                src="/varkala-beach.jpg"
+                alt="responsive"
+                class="img-circular"
+              />
+            </div>
             <iframe
               src="https://carbon.now.sh/embed/67h4GUudqrWvRQgNbtXi"
               style="
