--- a/components/avatar.html
+++ b/components/avatar.html
@@ -54,7 +54,7 @@
               <a class="link" href="/components/input.html">Input</a>
             </li>
             <li class="list aside-list">
-              <a class="link" href="/components/textutilities.html"
+              <a class="link" href="/components/typography.html"
                 >Text Utilities</a
               >
             </li>
