--- a/components/alert.css
+++ b/components/alert.css
@@ -11,68 +11,68 @@
 }
 
 /* || Default Alert || */
-.primary {
+.alert.primary {
   color: var(--alert-primary);
   background-color: var(--alert-primary-bg);
 }
 
-.secondary {
+.alert.secondary {
   color: var(--alert-secondary);
   background-color: var(--alert-secondary-bg);
 }
 
-.success {
+.alert.success {
   color: var(--alert-success);
   background-color: var(--alert-success-bg);
 }
 
-.warning {
+.alert.warning {
   color: var(--alert-warning);
   background-color: var(--alert-warning-bg);
 }
 
-.error {
+.alert.error {
   color: var(--alert-error);
   background-color: var(--alert-error-bg);
 }
 
-.info {
+.alert.info {
   color: var(--alert-info);
   background-color: var(--alert-info-bg);
 }
 
 /* || Outline Alert || */
-.primary-outline {
+.alert.primary-outline {
   color: var(--alert-primary);
   border: 0.01rem solid var(--alert-primary);
   background-color: var(--white);
 }
 
-.secondary-outline {
+.alert.secondary-outline {
   color: var(--black);
   border: 0.01rem solid var(--black);
   background-color: var(--white);
 }
 
-.success-outline {
+.alert.success-outline {
   color: var(--alert-success);
   border: 0.01rem solid var(--alert-success);
   background-color: var(--white);
 }
 
-.warning-outline {
+.alert.warning-outline {
   color: var(--alert-warning);
   border: 0.01rem solid var(--alert-warning);
   background-color: var(--white);
 }
 
-.error-outline {
+.alert.error-outline {
   color: var(--alert-error);
   border: 0.01rem solid var(--alert-error);
   background-color: var(--white);
 }
 
-.info-outline {
+.alert.info-outline {
   color: var(--alert-info);
   border: 0.01rem solid var(--alert-info);
   background-color: var(--white);
