--- a/components/input.css
+++ b/components/input.css
@@ -48,6 +48,26 @@
   color: var(--danger);
 }
 
+/* || Textbox with Icon || */
+.textbox-icon-container {
+  display: flex;
+  background-color: var(--white);
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  font-size: 1.2rem;
+  padding: 10px 1.1rem;
+  gap: 1.25rem;
+  border: 1px solid var(--black);
+  border-radius: 4px;
+}
+
+.textbox-icon-container > .textbox {
+  border: none;
+  padding: 0;
+  font-size: 1.2rem;
+}
+
 /* || checkbox || */
 .checkbox-container,
 .radio-container {
