--- a/components/input.html
+++ b/components/input.html
@@ -170,6 +170,29 @@
             </iframe>
           </div>
           <div class="inner-container">
+            <h2>Textbox with Icon</h2>
+            <div class="showcase">
+              <div class="textbox-container">
+                <div class="textbox-icon-container">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                  <input type="text" placeholder="Search" class="textbox" />
+                </div>
+              </div>
+            </div>
+            <iframe
+              src="https://carbon.now.sh/embed/67h4GUudqrWvRQgNbtXi"
+              style="
+                width: 100%;
+                height: 100%;
+                border: 0;
+                transform: scale(1);
+                overflow: hidden;
+              "
+              sandbox="allow-scripts allow-same-origin"
+            >
+            </iframe>
+          </div>
+          <div class="inner-container">
             <h2>Checkbox</h2>
             <div class="showcase">
               <div class="checkbox-container">
