--- a/components/input.css
+++ b/components/input.css
@@ -55,8 +55,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  font-size: 1.2rem;
-  padding: 10px 1.1rem;
+  padding: 8px 10px;
   gap: 1.25rem;
   border: 1px solid var(--black);
   border-radius: 4px;
