--- a/components/typography.html
+++ b/components/typography.html
@@ -59,7 +59,7 @@
               >
             </li>
             <li class="list aside-list">
-              <a class="link" href="/components/lists.html">Lists</a>
+              <a class="link" href="/components/list.html">Lists</a>
             </li>
             <li class="list aside-list">
               <a class="link" href="/components/navigation.html">Navigation</a>
