--- a/components/typography.html
+++ b/components/typography.html
@@ -63,9 +63,24 @@
             <li class="list aside-list">
               <a class="link" href="/components/navigation.html">Navigation</a>
             </li>
+            <li class="list aside-list">
+              <a class="link" href="/components/modal.html">Modal</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="/components/rating.html">Rating</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="/components/toast.html">Toast</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="/components/grid.html">Grid</a>
+            </li>
+            <li class="list aside-list">
+              <a class="link" href="/components/slider.html">Slider</a>
+            </li>
           </ul>
         </aside>
-        <article class="article">
+        <main class="main">
           <h1>Typography</h1>
           <div class="inner-container">
             <h2>Headings</h2>
