--- a/docs/docs.css
+++ b/docs/docs.css
@@ -60,8 +60,8 @@
   margin-top: 1rem;
 }
 
-/* || article || */
-.article {
+/* || main || */
+.main {
   flex: 4;
   display: flex;
   flex-direction: column;
