--- a/components/modal.css
+++ b/components/modal.css
@@ -4,7 +4,7 @@
   background-color: var(--white);
   padding: 2rem 0;
   width: 50%;
-  border-radius: 0.5rem;
+  border-radius: 8px;
 }
 
 .modal-header {
@@ -34,5 +34,5 @@
   display: flex;
   margin-left: auto;
   padding: 0 2rem 1rem 2rem;
-  gap: 0.7rem;
+  gap: 10px;
 }
