--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,11 @@
 @import url("/components/list.css");
 @import url("/components/navigation.css");
 @import url("/components/typography.css");
+@import url("/components/modal.css");
+@import url("/components/rating.css");
+@import url("/components/toast.css");
+@import url("/components/grid.css");
+@import url("/components/slider.css");
 
 :root {
   --white: #fff;
@@ -59,4 +64,6 @@
   --stacked-list-border: #808080;
   --stacked-list-hover: #f0f0f0;
   --input-border: #000;
+
+  --z-index-toast: 9999;
 }
