style: added rating badge to card component

--- a/components/card.html
+++ b/components/card.html
@@ -167,6 +167,16 @@
                 </button>
                 <div class="card-image-container">
                   <img class="card-image" src="/legion5.jpg" alt="card" />
+                  <div class="rating-badge-container">
+                    <span class="rating-badge-value">4.8</span>
+                    <span class="rating-badge-icon"
+                      ><i class="fa-solid fa-star"></i
+                    ></span>
+                    <span class="rating-badge-number">
+                      <span class="rating-badge-separator">|</span>
+                      224</span
+                    >
+                  </div>
                 </div>
                 <div class="card-details-container">
                   <div class="card-details-header">
@@ -216,6 +226,16 @@
                 </button>
                 <div class="card-image-container">
                   <img class="card-image" src="/legion5.jpg" alt="card" />
+                  <div class="rating-badge-container">
+                    <span class="rating-badge-value">4.8</span>
+                    <span class="rating-badge-icon"
+                      ><i class="fa-solid fa-star"></i
+                    ></span>
+                    <span class="rating-badge-number">
+                      <span class="rating-badge-separator">|</span>
+                      224</span
+                    >
+                  </div>
                 </div>
                 <div class="card-details-container">
                   <div class="card-details-header">
@@ -258,13 +278,19 @@
           <div class="inner-container">
             <h2>Card with Text Overlay</h2>
             <div class="showcase">
-              <div class="card-container shadow">
+              <div class="card-container shadow overlay">
                 <div class="card-image-container">
-                  <img
-                    class="card-image overlay"
-                    src="/legion5.jpg"
-                    alt="card"
-                  />
+                  <img class="card-image" src="/legion5.jpg" alt="card" />
+                  <div class="rating-badge-container">
+                    <span class="rating-badge-value">4.8</span>
+                    <span class="rating-badge-icon"
+                      ><i class="fa-solid fa-star"></i
+                    ></span>
+                    <span class="rating-badge-number">
+                      <span class="rating-badge-separator">|</span>
+                      224</span
+                    >
+                  </div>
                   <p class="text-overlay">Out of Stock</p>
                 </div>
                 <div class="card-details-container">
