--- a/components/card.css
+++ b/components/card.css
@@ -46,10 +46,6 @@
   border-radius: 0 7px 7px 0;
 }
 
-.card-image-container {
-  position: relative;
-}
-
 .text-overlay {
   position: absolute;
   left: 50%;
@@ -63,6 +59,12 @@
   text-align: center;
 }
 
+.card-image-container {
+  height: 20rem;
+  width: 20rem;
+  position: relative;
+}
+
 .card-image {
   height: 20rem;
   width: 20rem;
@@ -71,8 +73,14 @@
   border: 1px solid var(--card-img-border);
 }
 
-.card-image.overlay {
-  opacity: 0.3;
+.rating-badge-container {
+  position: absolute;
+  left: 4px;
+  bottom: 4px;
+}
+
+.overlay {
+  opacity: 0.5;
 }
 
 .card-details-container {
