--- a/components/rating.html
+++ b/components/rating.html
@@ -22,9 +22,24 @@
         <div class="nav-brand-name">
           <a href="/index.html" class="link nav-link">Minnal UI</a>
         </div>
-        <ul class="nav-links">
+        <ul class="nav-contacts">
           <li class="list">
-            <a href="/docs/docs.html" class="link nav-link">Docs</a>
+            <a href="https://github.com/VishnuVNairCodes" target="_blank">
+              <i class="bi bi-github nav-contact-link"></i
+            ></a>
+          </li>
+          <li class="list">
+            <a href="https://twitter.com/vishnyou" target="_blank">
+              <i class="bi bi-twitter nav-contact-link"></i
+            ></a>
+          </li>
+          <li class="list">
+            <a
+              href="https://www.linkedin.com/in/vishnu-v-nair-96178b130/"
+              target="_blank"
+            >
+              <i class="bi bi-linkedin nav-contact-link"></i
+            ></a>
           </li>
         </ul>
       </nav>
@@ -67,17 +82,19 @@
               <a class="link" href="/components/modal.html">Modal</a>
             </li>
             <li class="list aside-list">
-              <a class="link" href="/components/rating.html">Rating</a>
+              <a class="link link-active" href="/components/rating.html"
+                >Rating</a
+              >
             </li>
             <li class="list aside-list">
               <a class="link" href="/components/toast.html">Toast</a>
             </li>
-            <li class="list aside-list">
+            <!-- <li class="list aside-list">
               <a class="link" href="/components/grid.html">Grid</a>
             </li>
             <li class="list aside-list">
               <a class="link" href="/components/slider.html">Slider</a>
-            </li>
+            </li> -->
           </ul>
         </aside>
         <main class="main">
@@ -155,7 +172,7 @@
           </div>
           <div class="inner-container">
             <h2>Rating Badge</h2>
-            <div class="showcase">
+            <div class="showcase showcase-rating-badge">
               <!-- || Rating Badge Component -->
               <div class="rating-badge-container">
                 <span class="rating-badge-value">4.8</span>
