--- a/docs/docs.css
+++ b/docs/docs.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+
 * {
   margin: 0;
   padding: 0;
@@ -18,10 +20,11 @@
 .link {
   text-decoration: none;
   color: var(--black);
+  transition: all 0.3s;
 }
-.link:hover {
+.link:hover,
+.link-active {
   font-weight: bold;
-  transition: 0.5s;
 }
 
 /* ||navigation|| */
@@ -34,11 +37,16 @@
 .nav-brand-name {
   font-weight: bold;
 }
-.nav-links {
-  display: flex;
-}
-.nav-link {
+.nav-brand-name-link {
   margin: 0 1rem;
+}
+.nav-contacts {
+  display: flex;
+  gap: 1rem;
+  font-size: 1.2rem;
+}
+.nav-contact-link {
+  color: var(--secondary);
 }
 
 /* || content || */
@@ -75,21 +83,20 @@
   flex-direction: column;
   gap: 1rem;
 }
-.showcase {
+
+.showcase,
+.showcase-column {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-around;
   background-color: var(--showcase-bg);
   padding: 3rem;
   border-radius: 0.3rem;
+}
+.showcase {
+  flex-wrap: wrap;
   gap: 1rem;
 }
 .showcase-column {
-  display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  background-color: var(--showcase-bg);
-  padding: 3rem;
-  border-radius: 0.3rem;
   gap: 2rem;
 }
