--- a/components/image.html
+++ b/components/image.html
@@ -109,7 +109,7 @@
               />
             </div>
             <iframe
-              src="https://carbon.now.sh/embed/67h4GUudqrWvRQgNbtXi"
+              src="https://carbon.now.sh/embed/MLh6rBwWhMLByGG2364s"
               style="
                 width: 100%;
                 height: 100%;
@@ -126,12 +126,12 @@
             <div class="showcase">
               <img
                 src="/varkala-beach.jpg"
-                alt="responsive"
+                alt="circular"
                 class="img-circular"
               />
             </div>
             <iframe
-              src="https://carbon.now.sh/embed/67h4GUudqrWvRQgNbtXi"
+              src="https://carbon.now.sh/embed/p29YEmluwGKzsMQB1L0R"
               style="
                 width: 100%;
                 height: 100%;
