--- a/index.css
+++ b/index.css
@@ -4,15 +4,30 @@
   box-sizing: border-box;
 }
 .container {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: "Lato", sans-serif;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.landing-heading {
+  font-size: 5rem;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.landing-text {
+  font-size: 2rem;
+  text-align: center;
 }
 
 .btn-get-started {
+  font-size: 2rem;
   color: white;
   background-color: blue;
   padding: 1rem;
