--- a/components/avatar.html
+++ b/components/avatar.html
@@ -14,7 +14,7 @@
     <link href="/styles.css" rel="stylesheet" type="text/css" />
     <link href="/docs/docs.css" rel="stylesheet" type="text/css" />
     <link href="avatar.css" rel="stylesheet" type="text/css" />
-    <title>Get Started</title>
+    <title>Minnal UI</title>
   </head>
   <body>
     <div class="container">
@@ -46,6 +46,9 @@
       <div class="content">
         <aside class="aside">
           <ul>
+            <li class="list aside-list">
+              <a class="link" href="/docs/installation.html">Installation</a>
+            </li>
             <li class="list aside-list">
               <a class="link link-active" href="/components/avatar.html"
                 >Avatar</a
