--- a/docs/docs.css
+++ b/docs/docs.css
@@ -9,6 +9,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  font-size: 1.25rem;
   margin: 2rem;
   height: 100vh;
   font-family: "Lato", sans-serif;
