--- a/components/card.css
+++ b/components/card.css
@@ -2,47 +2,47 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 20.5rem;
-  padding: 3px;
+  width: 33rem;
+  padding: 4px;
   border: 1px solid var(--card-border);
   border-radius: 4px;
-  gap: 0.8rem;
+  gap: 1.2rem;
   background-color: var(--white);
 }
 
 .card-container.horizontal {
   flex-direction: row;
-  width: 41rem;
+  width: 66rem;
   align-items: center;
 }
 
 .card-container.shadow {
   box-shadow: 0 4px 8px 0 var(--card-shadow-1),
-    0 6px 20px 0 var(--card-shadow-2);
+    0 6px 2rem 0 var(--card-shadow-2);
 }
 
 .card-container > .btn-icon {
   color: var(--card-dismiss);
   position: absolute;
-  top: 15px;
-  right: 15px;
-  font-size: 1.5rem;
+  top: 1.6rem;
+  right: 1.6rem;
+  font-size: 2.4rem;
   z-index: 1;
 }
 .card-container > .btn-icon:hover {
   color: var(--black);
-  transition: 0.2s;
+  transition: color 0.3s;
 }
 
 .card-badge {
   position: absolute;
-  top: 1.2rem;
+  top: 2rem;
   left: 0;
   z-index: 1;
   color: var(--white);
   background-color: var(--primary);
-  font-size: 0.9rem;
-  padding: 3px;
+  font-size: 1.4rem;
+  padding: 4px;
   border-radius: 0 7px 7px 0;
 }
 
@@ -51,7 +51,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  font-size: 1.4rem;
+  font-size: 2.2rem;
   color: var(--white);
   background-color: var(--text-overlay-bg);
   padding: 5px;
@@ -60,14 +60,14 @@
 }
 
 .card-image-container {
-  height: 20rem;
-  width: 20rem;
+  height: 32rem;
+  width: 32rem;
   position: relative;
 }
 
 .card-image {
-  height: 20rem;
-  width: 20rem;
+  height: 32rem;
+  width: 32rem;
   border-radius: 2px;
   object-fit: cover;
   border: 1px solid var(--card-img-border);
@@ -86,8 +86,8 @@
 .card-details-container {
   display: flex;
   flex-direction: column;
-  padding: 0.8rem;
-  gap: 1rem;
+  padding: 1.2rem;
+  gap: 1.6rem;
 }
 
 .card-details-header {
@@ -97,14 +97,14 @@
 }
 
 .card-details-header > button {
-  font-size: 1.8rem;
+  font-size: 2.9rem;
 }
 .card-details-header > button:hover {
   color: var(--wishlist-hover);
 }
 
 .card-text-container > h1 {
-  font-size: 1.1rem;
+  font-size: 1.8rem;
 }
 
 .card-price-container {
@@ -112,11 +112,11 @@
   flex-flow: row wrap;
   align-items: center;
   align-content: center;
-  gap: 10px;
+  gap: 1rem;
 }
 
 .card-price {
-  font-size: 2rem;
+  font-size: 3.2rem;
   font-weight: bold;
 }
 
