--- a/index.css
+++ b/index.css
@@ -3,6 +3,11 @@
 * {
   box-sizing: border-box;
 }
+
+html {
+  font-size: 62.5%;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -16,22 +21,22 @@
 }
 
 .landing-heading {
-  font-size: 5rem;
+  font-size: 8rem;
   text-align: center;
   margin-bottom: 0;
 }
 
 .landing-text {
-  font-size: 2rem;
+  font-size: 3.2rem;
   text-align: center;
 }
 
 .btn-get-started {
-  font-size: 2rem;
+  font-size: 3.2rem;
   color: white;
   background-color: blue;
-  padding: 1rem;
-  border-radius: 0.2rem;
+  padding: 1.6rem;
+  border-radius: 4px;
   border-style: none;
   text-decoration: none;
 }
