--- a/components/button.css
+++ b/components/button.css
@@ -3,15 +3,15 @@
   align-items: center;
   justify-content: center;
   gap: 7px;
-  padding: 1rem;
+  padding: 1.6rem;
   color: var(--white);
   background-color: var(--primary);
   border: none;
-  border-radius: 0.2rem;
+  border-radius: 4px;
   cursor: pointer;
 }
 .btn:hover {
-  transition: 0.1s;
+  transition: background-color 0.3s;
 }
 
 /* || Filled Button || */
@@ -113,7 +113,7 @@
 
 /* || Icon Button || */
 .btn-icon {
-  font-size: 2rem;
+  font-size: 3.2rem;
   color: var(--primary);
   border: none;
   background-color: transparent;
@@ -121,7 +121,7 @@
 }
 .btn-icon:hover {
   color: var(--primary-hover);
-  transition: 0.2s;
+  transition: color 0.3s;
 }
 
 /* || Floating Action Button || */
@@ -129,15 +129,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 3rem;
-  height: 3rem;
+  width: 4.8rem;
+  height: 4.8rem;
   border-radius: 50%;
   border: none;
-  font-size: 1.5rem;
-  padding: 1rem;
+  font-size: 2.4rem;
+  padding: 1.6rem;
   color: var(--white);
   background-color: var(--primary);
+  cursor: pointer;
 }
 .btn-floating-action:hover {
   background-color: var(--primary-hover);
+  transition: background-color 0.3s;
 }
