--- a/components/input.css
+++ b/components/input.css
@@ -10,7 +10,7 @@
 
 .textbox {
   width: 100%;
-  padding: 0.5rem;
+  padding: 8px;
   border-style: solid;
   border-color: var(--input-border);
   border-radius: 4px;
@@ -33,7 +33,7 @@
 }
 
 .msg-validation {
-  font-size: 0.8rem;
+  font-size: 1.2rem;
 }
 
 .msg-validation.success {
@@ -55,8 +55,8 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  padding: 8px 10px;
-  gap: 1.25rem;
+  padding: 8px 1rem;
+  gap: 2rem;
   border: 1px solid var(--black);
   border-radius: 4px;
 }
@@ -74,7 +74,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 3rem;
+  gap: 4.8rem;
 }
 
 .checkbox-container > label,
@@ -82,11 +82,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 1.6rem;
 }
 
 .checkbox,
 .radio {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 2.4rem;
+  height: 2.4rem;
 }
