--- a/components/modal.css
+++ b/components/modal.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: var(--white);
-  padding: 2rem 0;
+  padding: 3.2rem 0;
   width: 50%;
   border-radius: 8px;
 }
@@ -10,7 +10,7 @@
 .modal-header {
   display: flex;
   align-items: center;
-  padding: 0 2rem 1rem 2rem;
+  padding: 0 3.2rem 1.6rem 3.2rem;
 }
 
 .modal-close {
@@ -27,12 +27,12 @@
 }
 
 .modal-text {
-  padding: 0 2rem 1rem 2rem;
+  padding: 0 3.2rem 1.6rem 3.2rem;
 }
 
 .modal-button-container {
   display: flex;
   margin-left: auto;
-  padding: 0 2rem 1rem 2rem;
-  gap: 10px;
+  padding: 0 3.2rem 1.6rem 3.2rem;
+  gap: 1rem;
 }
