--- a/components/avatar.css
+++ b/components/avatar.css
@@ -1,43 +1,43 @@
 .avatar {
   display: flex;
-  width: 6.4rem;
-  height: 6.4rem;
+  width: var(--sp-sixtys);
+  height: var(--sp-sixtys);
   border-radius: 50%;
   object-fit: cover;
 }
 
 .square {
-  border-radius: 7%;
+  border-radius: var(--br-1);
 }
 
 .text {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: blueviolet;
+  background-color: var(--primary);
 }
 
 .x-sm {
-  width: 2.4rem;
-  height: 2.4rem;
+  width: var(--sp-twentys);
+  height: var(--sp-twentys);
 }
 
 .sm {
-  width: 4.8rem;
-  height: 4.8rem;
+  width: var(--sp-fourtys);
+  height: var(--sp-fourtys);
 }
 
 .md {
-  width: 6.4rem;
-  height: 6.4rem;
+  width: var(--sp-sixtys);
+  height: var(--sp-sixtys);
 }
 
 .lg {
-  width: 8rem;
-  height: 8rem;
+  width: var(--sp-eightys);
+  height: var(--sp-eightys);
 }
 
 .x-lg {
-  width: 9.6rem;
-  height: 9.6rem;
+  width: var(--sp-ninetys);
+  height: var(--sp-ninetys);
 }
