--- a/components/badge.css
+++ b/components/badge.css
@@ -35,8 +35,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 1.8rem;
-  height: 1.8rem;
+  width: var(--sp-tens2);
+  height: var(--sp-tens2);
   border-radius: 50%;
   color: var(--white);
   background-color: var(--dnd);
@@ -46,5 +46,5 @@
 }
 
 .container-badge > i {
-  font-size: 4.8rem;
+  font-size: var(--f-fourtys);
 }
