--- a/components/button.css
+++ b/components/button.css
@@ -2,12 +2,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 7px;
-  padding: 1.6rem;
+  gap: var(--sp-fractions3);
+  padding: var(--sp-tens2);
   color: var(--white);
   background-color: var(--primary);
   border: none;
-  border-radius: 4px;
+  border-radius: var(--br-1);
   cursor: pointer;
 }
 .btn:hover {
@@ -113,7 +113,7 @@
 
 /* || Icon Button || */
 .btn-icon {
-  font-size: 3.2rem;
+  font-size: var(--f-thirtys2);
   color: var(--primary);
   border: none;
   background-color: transparent;
@@ -129,12 +129,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 4.8rem;
-  height: 4.8rem;
+  width: var(--sp-fourtys);
+  height: var(--sp-fourtys);
   border-radius: 50%;
   border: none;
-  font-size: 2.4rem;
-  padding: 1.6rem;
+  font-size: var(--f-twentys2);
+  padding: var(--sp-tens2);
   color: var(--white);
   background-color: var(--primary);
   cursor: pointer;
