--- a/components/navigation.css
+++ b/components/navigation.css
@@ -3,14 +3,14 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 8rem;
+  height: var(--sp-eightys);
   background-color: var(--white);
 }
 
 .navigation-bar {
   display: flex;
   width: 83%;
-  padding: 1rem;
+  padding: var(--sp-tens1);
   align-items: center;
   justify-content: space-between;
 }
@@ -30,11 +30,11 @@
 }
 
 .navigation-action .btn {
-  font-size: 2rem;
-  padding: 4px;
+  font-size: var(--f-twentys1);
+  padding: var(--sp-fractions2);
   text-decoration: none;
 }
 
 .navigation-action .btn-icon {
-  font-size: 2rem;
+  font-size: var(--f-twentys1);
 }
