--- a/components/toast.css
+++ b/components/toast.css
@@ -2,12 +2,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1.6rem;
-  border-radius: 4px;
-  gap: 4.8rem;
+  padding: var(--sp-tens2);
+  border-radius: var(--br-1);
+  gap: var(--sp-fourtys);
   font-weight: bold;
   z-index: var(--z-index-toast);
-  box-shadow: 2px 2px 5px var(--secondary);
+  box-shadow: var(--sp-fractions1) var(--sp-fractions1) var(--sp-fractions2)
+    var(--secondary);
 }
 
 .toast-btn-close {
