--- a/components/typography.css
+++ b/components/typography.css
@@ -1,43 +1,62 @@
 /* || Headings || */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  display: block;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: var(--fwt-bold);
+}
+
 .h1,
 h1 {
-  font-size: 4.8rem;
-  line-height: 6.4rem;
+  font-size: var(--f-fourtys);
+  line-height: var(--sp-sixtys);
 }
 
 .h2,
 h2 {
-  font-size: 3.2rem;
-  line-height: 4rem;
+  font-size: var(--f-thirtys2);
+  line-height: var(--sp-fourtys);
 }
 
 .h3,
 h3 {
-  font-size: 2.4rem;
-  line-height: 3.2rem;
+  font-size: var(--f-thirtys1);
+  line-height: var(--sp-fourtys);
 }
 
 .h4,
 h4 {
-  font-size: 1.6rem;
-  line-height: 2.4rem;
+  font-size: var(--f-twentys2);
+  line-height: var(--sp-fourtys);
 }
 
 .h5,
 h5 {
-  font-size: 8px;
-  line-height: 1.6rem;
+  font-size: var(--f-twentys1);
+  line-height: var(--sp-thirtys);
 }
 
 .h6,
 h6 {
-  font-size: 8px;
-  line-height: 1.6rem;
+  font-size: var(--f-tens4);
+  line-height: var(--sp-thirtys);
 }
 
 /* || Small Text || */
 .text-small {
-  font-size: 8px;
+  font-size: var(--f-tens2);
+  line-height: var(--sp-twentys);
 }
 
 /* || Gray Text || */
